--- a/data.yml
+++ b/data.yml
@@ -1,5 +1,5 @@
 site-url: "http://twconf.data-sci.org/"
 site-title: "台灣資料科學愛好者年會 2014 — Exploring the Potentials and Risks of Real-World Data Analytics"
 site-name: "Data Science in Taiwan Conference 2014"
-site-description: "none"
+site-description: "台灣資料科學愛好者協會，主意在推動資料科學在台灣的認知及普及應用，期望能看到台灣的產業甚至政府部門能夠有效利用各自手上的各類型資料，經過適當的資料分析及／或預測技術，來為產業建立更大的價值，提供使用者／人民更好的服務及生活品質。"
 # app-id: "371190826328806"
